Prevent line break in flash button.

--- a/src/stylesheets/components/_flash.scss
+++ b/src/stylesheets/components/_flash.scss
@@ -32,6 +32,7 @@
 
   .btn-primary {
     margin-left: $space-sm;
+    white-space: nowrap;
   }
 
   .btn-icon {
